# nova-oar-mcp

./: .gitignore  README.md  claude-mcp-config-uvx.json  main.py  nova_oar_mcp.py  pyproject.toml
docs/: mcp-llms-full.txt  python-sdk-readme.md
